--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -18,6 +18,8 @@ main {
     width: 25%;
 
     border: 1px solid blue;
+    border-radius: .5rem;
+
     padding: 1%;
 
     display: grid;
@@ -27,6 +29,16 @@ main {
 main input {
     width: 100%;
     height: 100px;
+
+    caret-color: transparent;
+    text-align: right;
+}
+
+/* Chrome, Safari, Edge, Opera */
+main input::-webkit-outer-spin-button,
+main input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 main div {
