--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -17,8 +17,10 @@ main {
     
     width: 25%;
 
-    border: 1px solid blue;
+    border: 3px solid rgb(210, 213, 216);
     border-radius: .5rem;
+
+    background-color: rgb(245, 245, 245);
 
     padding: 1%;
 
@@ -30,11 +32,18 @@ main input {
     width: 100%;
     height: 100px;
 
+    padding: 1rem;
+
     caret-color: transparent;
     text-align: right;
+
+    font-size: 2.5rem;
 }
 
-/* Chrome, Safari, Edge, Opera */
+main input:focus {
+    outline: none;
+}
+
 main input::-webkit-outer-spin-button,
 main input::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -50,4 +59,11 @@ main div {
 
 main button {
     width: 100%;
+
+    background-color: rgb(210, 213, 216);
+    border: none;
+
+    font-size: 1.4rem;
+
+    cursor: pointer;
 }
